--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-toastify": "^0.0.27"
   }
 }
